{
  "version": 4,
  "terraform_version": "0.12.23",
  "serial": 44,
  "lineage": "642725f3-bf46-ad5d-8654-1e95df0d1f33",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "app_acl_expose_egress_ethemeral_port_to_web_subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "app_acl_expose_ethemeral_port_to_db_subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "app_acl_expose_http_port_to_web_subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "app_acl_expose_https_port_to_web_subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "db_acl_expose_egress_ephemeral_to_app_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "db_acl_expose_postgresql_port_to_app_subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "web_acl_enable_all_egress_between_azs",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "web_acl_enable_all_ingress_between_azs",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "web_acl_expose_ethemeral_port_to_app_subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ga_sb_vpc_public_assoc",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ga_sb_vpc_rt_app_assoc",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ga_sb_vpc_rt_db_assoc",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ga_sb_vpc_app_subnet",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ga_sb_vpc_db_subnet",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ga_sb_vpc_web_subnet",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ga_sb_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:288871573946:vpc/vpc-09d80ce28bab0c1d2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.30.0.0/16",
            "default_network_acl_id": "acl-0fd102a99fb4840c7",
            "default_route_table_id": "rtb-0700dcce830c99a23",
            "default_security_group_id": "sg-0ef35dd5fae095138",
            "dhcp_options_id": "dopt-48a1e82f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09d80ce28bab0c1d2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0700dcce830c99a23",
            "owner_id": "288871573946",
            "tags": {
              "Name": "ga_sb_vpc"
            }
          }
        }
      ]
    }
  ]
}